tests/rosetta/out/Fortran/bitwise-operations.error
gfortran: exit status 1
/tmp/bitwise-operations.f90:54:38:

   54 |       if ((mod(((mod(ua,2) == 1) .and. ub),2) == 1)) then
      |                                      1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/bitwise-operations.f90:72:37:

   72 |       if ((mod(((mod(ua,2) == 1) .or. ub),2) == 1)) then
      |                                     1
Error: Operands of logical operator ‘.or.’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/bitwise-operations.f90:92:70:

   92 |       if ((((((abit == 1) .and. bbit) == 0)) .or. ((((abit == 0) .and. bbit) == 1)))) then
      |                                                                      1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/bitwise-operations.f90:92:31:

   92 |       if ((((((abit == 1) .and. bbit) == 0)) .or. ((((abit == 0) .and. bbit) == 1)))) then
      |                               1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
